--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
         .then((data) => {
         console.log(data)
                     showModal(data.message);
-          if (data.issucess === "true") {
+          if (data.issucess = true) {
             sessionStorage.setItem("user", JSON.stringify(data.user));
             console.log(data.user)
             sessionStorage.setItem('userid', data.user.userid);
@@ -135,6 +135,7 @@
           }
         })
         .catch((error) => {
+          console.log(error)
           showModal("An error occurred: " + error.message);
         });
       });
