--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
           if (data.issucess = true) {
             sessionStorage.setItem("user", JSON.stringify(data.user));
             console.log(data.user)
-            sessionStorage.setItem('userid', data.user.userid);
+            sessionStorage.setItem('userid', data.user.userId);
             sessionStorage.setItem('admin', data.user.admin);
             sessionStorage.setItem('email', data.user.email);
             sessionStorage.setItem('fullname', data.user.fullname);
