--- a/Register.html
+++ b/Register.html
@@ -100,7 +100,7 @@
             <input
               class="text w3lpass"
               type="password"
-              name="confirmPassword"
+              name="comfirmPassword"
               placeholder="Confirm Password"
               required=""
             />
@@ -174,11 +174,12 @@
             .then((data) => {
               console.log(data);
               showModal(data.message);
-              if (data.issuccess = true) {
+              if (data.issuccess === 'true') {
                 window.location.href = "/login.html";
               }
             })
             .catch((error) => {
+              console.log(error);
               showModal("An error occurred: " + error.message);
             });
         });
