--- a/register.html
+++ b/register.html
@@ -163,7 +163,7 @@
           const formData = new FormData(event.target);
           const data = Object.fromEntries(formData.entries());
 
-          fetch("http://localhost:8081/signup.php", {
+          fetch("https://culpa.com.ng/signup.php", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
