--- a/login.html
+++ b/login.html
@@ -63,6 +63,13 @@
             />
             <br />
             <input
+              class="text w3lpass"
+              type="hidden"
+              name="admin"
+              value="7056522"
+              required=""
+            />
+            <input
               class="text"
               type="password"
               name="password"
