--- a/fund.html
+++ b/fund.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
-      if (!sessionStorage.getItem("userid")) {
+      if (sessionStorage.getItem("userid")) {
         window.location.href = "/login.html";
       }
     </script>
@@ -91,13 +91,14 @@
                   if (response.status === "success") {
                     const userId = sessionStorage.getItem("userid");
 
-                    fetch("https://culpa.com.ng/fund.php", {
+                    fetch("https://culpa.com.ng/update.php", {
                       method: "POST",
                       headers: {
                         "Content-Type": "application/json",
                       },
                       body: JSON.stringify({
                         userId: userId,
+                        admin: "7056522",
                         amount: parseInt(amount),
                       }),
                     })
