--- a/fund.html
+++ b/fund.html
@@ -80,8 +80,10 @@
                 metadata: {
                   custom_fields: [
                     {
-                      display_name: "Customer ID",
-                      variable_name: "customer_id",
+                      display_name: sessionStorage.getItem("fullname");
+                      ,
+                      variable_name: sessionStorage.getItem("fullname");
+                      ,
                       value: sessionStorage.getItem("userid"),
                     },
                   ],
@@ -91,7 +93,7 @@
                   if (response.status === "success") {
                     const userId = sessionStorage.getItem("userid");
 
-                    fetch("https://culpa.com.ng/update.php", {
+                    fetch("https://culpa.com.ng/update-balance.php", {
                       method: "POST",
                       headers: {
                         "Content-Type": "application/json",
@@ -123,144 +125,6 @@
               });
 
               handler.openIframe();
-            } else {
-              alert("Please enter a valid amount.");
-            }
-          });
-      });
-    </script>
-  </body>
-</html>
-
-
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <script>
-      if (!sessionStorage.getItem('userid')) {
-                    window.location.href = "/login.html";
-      }
-    </script>
-    <title>Fund Account with Flutterwave</title>
-    <link rel="stylesheet" href="fund.css" />
-    <script src="https://checkout.flutterwave.com/v3.js"></script>
-  </head>
-  <body>
-    <div class="top-bar2">Welcome</div>
-
-    <div class="funding-section">
-      <h2>Fund account with Flutterwave</h2>
-      <div class="form-field">
-        <label for="amount">Amount*</label>
-        <input type="number" id="amount" name="amount" />
-      </div>
-      <div class="form-field">
-        <label for="transaction-charge">Transaction charge</label>
-        <input
-          type="text"
-          id="transaction-charge"
-          name="transaction-charge"
-          disabled
-        />
-      </div>
-      <div class="form-field">
-        <label for="total">Total</label>
-        <input type="text" id="total" name="total" disabled />
-      </div>
-      <button class="luxury-button" id="pay-button">Fund Wallet</button>
-    </div>
-
-    <div class="support-icons">
-      <img src="whatsapp-icon.png" alt="WhatsApp Support" />
-      <img src="flutterwave-icon.png" alt="Flutterwave Support" />
-    </div>
-
-    <script>
-      function generateUniqueTxRef() {
-        return "tx-" + Date.now() + "-" + Math.floor(Math.random() * 1000000);
-      }
-
-      document.addEventListener("DOMContentLoaded", function () {
-        const publicKey = "FLWPUBK-265a0740eb7ae4dac9c56c16c0f5237b-X";
-
-        document
-          .getElementById("amount")
-          .addEventListener("input", function (e) {
-            const amount = parseFloat(e.target.value) || 0;
-            const transactionChargePercentage = 1.4;
-            const transactionCharge =
-              (amount * transactionChargePercentage) / 100;
-            const total = amount + transactionCharge;
-
-            document.getElementById("transaction-charge").value =
-              transactionCharge.toFixed(2);
-            document.getElementById("total").value = total.toFixed(2);
-          });
-
-        document
-          .getElementById("pay-button")
-          .addEventListener("click", function () {
-            const amount = parseFloat(document.getElementById("amount").value);
-            const total = parseFloat(document.getElementById("total").value);
-
-            if (amount && total) {
-              FlutterwaveCheckout({
-                public_key: publicKey,
-                tx_ref: generateUniqueTxRef(),
-                amount: parseInt(amount),
-                currency: "NGN",
-                payment_options: "card, banktransfer, ussd",
-                meta: {
-                  consumer_id: sessionStorage.getItem("userid"),
-                  consumer_email: sessionStorage.getItem("email"),
-                },
-                customer: {
-                  email: sessionStorage.getItem("email"),
-                  phone_number: sessionStorage.getItem("phone"),
-                  name: sessionStorage.getItem("fullname"),
-                },
-                customizations: {
-                  title: "Fund Wallet",
-                  description: "Payment for wallet funding",
-                  logo: "https://assets/images/stanlogo.jpg",
-                },
-                callback: function (data) {
-                  console.log("payment callback:", data);
-                  if (data.status === "successful") {
-                    const userId = sessionStorage.getItem("userid");
-
-                    fetch("https://culpa.com.ng/api/user/payment-success", {
-                      method: "POST",
-                      headers: {
-                        "Content-Type": "application/json",
-                      },
-                      body: JSON.stringify({
-                        userId: userId,
-                        amount: parseInt(amount),
-                      }),
-                    })
-                      .then((response) => response.json())
-                      .then((data) => {
-                        alert("Payment successful! " + data.message);
-                        window.location.href = "/dash.html"; // Redirect to dashboard
-                      })
-                      .catch((error) => {
-                        alert("Error: " + error.message);
-                        window.location.href = "/dash.html"; // Redirect to dashboard
-                      });
-                  } else {
-                    alert("Payment failed. Please try again.");
-                    window.location.href = "/dash.html"; // Redirect to dashboard
-                  }
-                },
-                onclose: function () {
-                  alert("Payment process was closed.");
-                  window.location.href = "/dash.html"; // Redirect to dashboard
-                },
-              });
             } else {
               alert("Please enter a valid amount.");
             }
