--- a/fund.html
+++ b/fund.html
@@ -80,10 +80,8 @@
                 metadata: {
                   custom_fields: [
                     {
-                      display_name: sessionStorage.getItem("fullname");
-                      ,
-                      variable_name: sessionStorage.getItem("fullname");
-                      ,
+                      display_name: "Customer ID",
+                      variable_name: "customer_id",
                       value: sessionStorage.getItem("userid"),
                     },
                   ],
@@ -133,3 +131,6 @@
     </script>
   </body>
 </html>
+
+
+
